--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "knex": "^0.21.1",
+        "knex-cleaner": "^1.3.0",
         "morgan": "^1.10.0",
         "nodemon": "^2.0.4",
         "sqlite3": "^4.2.0"
