--- a/package.json
+++ b/package.json
@@ -4,20 +4,25 @@
     "description": "",
     "main": "server.js",
     "dependencies": {
+        "connect-session-knex": "^1.7.2",
         "cors": "^2.8.5",
+        "cross-env": "^7.0.2",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "express-session": "^1.17.1",
         "helmet": "^3.23.3",
+        "jsonwebtoken": "^8.5.1",
         "knex": "^0.21.1",
         "knex-cleaner": "^1.3.0",
         "morgan": "^1.10.0",
+        "node": "^14.5.0",
         "nodemon": "^2.0.4",
         "pg": "^8.2.1",
         "sqlite3": "^4.2.0"
     },
     "devDependencies": {},
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "cross-env NODE_ENV=testing jest --watch --runInBand",
         "start": "node server.js",
         "server": "nodemon index.js"
     },
