--- a/procfile
+++ b/procfile
@@ -1,3 +1,1 @@
-web:knex migrate:rollback
-web:knex migrate:latest
-web:knex seed:run
+web:knex migrate:rollback && knex migrate:latest && knex seed:run
