--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "Menu",
     "version": "1.0.0",
     "description": "",
-    "main": "server.js",
+    "main": "index.js",
     "dependencies": {
         "connect-session-knex": "^1.7.2",
         "cors": "^2.8.5",
@@ -23,7 +23,7 @@
     "devDependencies": {},
     "scripts": {
         "test": "cross-env NODE_ENV=testing jest --watch --runInBand",
-        "start": "node server.js",
+        "start": "node index.js",
         "server": "nodemon index.js"
     },
     "keywords": [],
