--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "jsonwebtoken": "^8.5.1",
         "knex": "^0.21.1",
         "knex-cleaner": "^1.3.0",
+        "lodash": "^4.17.20",
         "morgan": "^1.10.0",
         "node": "^14.5.0",
         "nodemon": "^2.0.4",
